        - ar: as alias to archive
	- extra/fixsrccnt: fix the previous version in the source container,
          after branching off the root of the version tree.
	- mklabel -up -follow: fixed a bug for symlink to ../../xxx
	- added fix source container instructions to extra/Configuration.pod
	- renamed FSCbroker to FSCbrokeSsh
	- annotate: fixes, in conjunction with new options: -line and -grep

1.00 Sun Aug 12 16:20:44 IST 2012
        - no major change anymore in sight: formal publication signal
        - rollout: typo in help string
	- rollout: check lock of baseline, and lock it as configured
	- rollback: fix to remote case on UNIX
	- renamed _wrap to _Wrap, and made small functions non autoload
	- mkview -equiv: accept times with dashes and dots instead of spaces
	- added a synctree function, optionally fixing text file containers
	- annotate -grep: only the lines searched
	- extra/FSCbrokerSuDo: skip sudo for the owner account
	- support 'an' shortcut (for annotate)
	- lock: minor fix--pass non lbtype args to cleartool unaltered
	- unlock performs a cptype if needed
	- mklbtype -inc: test locally mastered before creating new increment
	- extra/locklbtypesudo, as well as renamed locklbtype to locklbtypessh
	- lsgen: fix-- with the -a option, siblings were missed in the genealogy
	- lsgen -offspring (new option)
	- lsgen -fmt (new option)
	- des -fmt %PVn: takes genealogy into account
	- des -fmt %[<regexp>]l, including while used from lsgen
	- co: cascading branches in the config spec is preserved unless under BranchOff

1.01 Sun Jan 13 20:33:29 CET 2013
        - co and mkbranch: obey -ver options in non BranchOff mode
	- unco: remove orphaned cascaded branch in non BranchOff mode (around CC bug)
	- mklbtype -inc: fixed error report for some missing types (but not all)
	- mklabel with a family type on checkedout -nda (missing file)
	- rmtype: support removing lbtype increment and preserving chaining
	- extra/locklbtypesudo: removed spurious autodie(:system)